mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: database
  labels:
    app: mongo-express
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      nodePort: 30000
